--- a/resume/src/index.css
+++ b/resume/src/index.css
@@ -1,5 +1,4 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+html, body, h1, h2, h3, h4, h5, h6 {
+	font-family: "Samsung One", "Comic Sans MS", cursive, sans-serif;
 }
+
