--- a/resume/src/index.css
+++ b/resume/src/index.css
@@ -13,3 +13,17 @@ html, body, h1, h2, h3, h4, h5, h6 {
 .margin-top-10 {
 	margin-top: 10px;
 }
+
+.text-decoration--none {
+	text-decoration: none
+}
+
+.image--blur:before {
+	background-repeat:round;
+   background-size:cover;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px) !important
+}
