update cv, add certification and update color

--- a/src/index.css
+++ b/src/index.css
@@ -32,5 +32,5 @@ html, body, h1, h2, h3, h4, h5, h6 {
 .w3-circle {
     border-radius: 15%;
 }
-.w3-teal,.w3-hover-teal:hover{color:#fff!important;background-color:#6667AB!important}
-.w3-text-teal,.w3-hover-text-teal:hover{color:#6667AB!important}
+.w3-teal,.w3-hover-teal:hover{color:#fff!important;background-color:#be3455!important}
+.w3-text-teal,.w3-hover-text-teal:hover{color:#be3455!important}
