--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -32,3 +32,26 @@
   font-weight: 800;
   src: url('SamsungOne-800.woff');
 }
+
+
+
+@font-face {
+  font-family: 'samsungSharpSans';
+  font-style: normal;
+  font-weight: 300;
+  src: url('SamsungSharpSans-Regular.woff');
+}
+
+@font-face {
+  font-family: 'samsungSharpSans';
+  font-style: normal;
+  font-weight: 600;
+  src: url('SamsungSharpSans-Medium.woff');
+}
+
+@font-face {
+  font-family: 'samsungSharpSans';
+  font-style: normal;
+  font-weight: 800;
+  src: url('SamsungSharpSans-Bold.woff');
+}
