--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 html, body, h1, h2, h3, h4, h5, h6 {
-	font-family: "Samsung One", "Comic Sans MS", cursive, sans-serif;
+	font-family: "samsungSharpSans", "Comic Sans MS", cursive, sans-serif;
+	font-weight: 300;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: 600;
 }
 
 .margin-4 {
